2004-12-17  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/state.c: open autosave file for writing, not reading

	* main/game.c, main/gamecntl.c, main/gameseq.c, main/multi.c,
	main/state.c, main/state.h: added fast save

2004-12-07  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c: Initialise the dataptr member correctly.

	* include/mono.h: Print only mildly interesting messages to
	stderr.txt. (revert earlier carbon changes)

2004-12-05  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/physfsx.h: getRealPath uses the write directory if it
	can't get the real directory

	* D2X.make: remove misc/d_io.c

2004-12-03  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: use PATH_MAX for hog
	pathname, ensure correct translation of path separators

2004-12-03  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* misc/strutil.c: fix stricmp and strnicmp

	* main/mission.c: set builtin_hogsize to 0 for the Descent 1 built
	in mission

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h: use sprintf in PHYSFSX_getRealPath() because
	I couldn't figure out why the previous code kept segfaulting under
	linux.

	* main/kconfig.c: disable call to reset_cockpit() which was
	causing the "letterbox" bug

	* main/inferno.c: don't die if title screens not found

2004-12-02  Martin Schaffner  <maschaffner@gmx.ch>

	* configure.ac: require PhysicsFS header and library

2004-12-02  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bm.c, main/piggy.c: fix cfile bugs from recent changes

	* D2X.make: fix build on Carbon by adding digiobj.c

	* main/mission.c: set builtin_hogsize for non-built-in missions

	* main/mission.c: pass individual mission around instead of whole list

	* main/mission.c: remove mission list from global memory

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: fix RELEASE build, make sure
	path separator gets added to hogdir
