@@ -5,6 +5,9 @@
 	* main/game.c, main/gamecntl.c, main/gameseq.c, main/multi.c,
 	main/state.c, main/state.h: added fast save
 
+	* main/gameseq.c, main/inferno.c: force gr_update() so screens
+	always show in OpenGL
+
 2004-12-07  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
 	* 2d/font.c: Initialise the dataptr member correctly.
